everything editable stable version

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,5 +18,5 @@
     <color name="cream2">#FFFF9D</color>
     <color name="light_green">#BEEB9F</color>
     <color name="green">#79BD8F</color>
-    <color name="turquoise2">#00A388</color>
+    <color name="turquoise">#00A388</color>
 </resources>
