--- a/app/src/main/res/layout-land/activity_gpa_display.xml
+++ b/app/src/main/res/layout-land/activity_gpa_display.xml
@@ -74,14 +74,14 @@
 
 
         <Button
-            android:id="@+id/button_add"
+            android:id="@+id/add_button"
             android:layout_column="2"
             android:layout_row="0"
             android:layout_width="50dp"
             android:layout_height="wrap_content"
             android:textSize="13sp"
             android:background="@color/orange"
-            android:text="@string/button_submit" />
+            android:text="@string/add" />
 
         <TextView
             android:layout_column="2"
@@ -98,6 +98,7 @@
 
 
     <RelativeLayout
+        android:id="@+id/listViewAndButtons"
         android:layout_width="wrap_content"
         android:layout_height="fill_parent"
         android:layout_above="@+id/input"
