--- a/app/src/main/res/layout-land/activity_subject_display.xml
+++ b/app/src/main/res/layout-land/activity_subject_display.xml
@@ -31,7 +31,7 @@
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:background="@color/beige"
-                android:text="@string/button_submit"
+                android:text="@string/add"
                 style="?android:attr/borderlessButtonStyle"/>
 
 
